udisks2: Add support for uuid

gvfs_udisks2_volume_get_uuid returns NULL regardless of the output
from udisks_block_get_id_uuid currently. Set volume->uuid property
and handle its changes properly.

https://bugzilla.gnome.org/show_bug.cgi?id=772894